Fixed alignment

--- a/style.css
+++ b/style.css
@@ -420,7 +420,6 @@ body.customize-support .navbar-fixed-top{
 
 .marketing {
 	margin: 60px 0;
-	padding-left:70px;
 }
 
 .marketing p + h4 {
